--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.password=postgres
 spring.datasource.username=postgres
+
+
+spring.datasource.hikari.connection-timeout=600000
+spring.jpa.properties.hibernate.jdbc.fetch_size=1000
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
+
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.web=DEBUG
